# pyargmin

./: .gitignore  .travis.yml  Cargo.toml  README.md  setup.py
.circleci/: config.yml
.github/: dependabot.yml
argmin/: __init__.py
argmin/tests/: test_argmin.py
examples/: test1.py
python/: test1.py
src/: executor.rs  lib.rs  operator.rs
