[package]
name = "pyargmin"
version = "0.0.1"
authors = ["Stefan Kroboth <stefan.kroboth@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Mathematical optimization in pure Rust accessible from Python"
documentation = "https://docs.rs/pyargmin/latest/pyargmin/"
homepage = "http://argmin-rs.org"
repository = "https://github.com/argmin-rs/pyargmin"
readme = "README.md"
keywords = ["optimization", "math", "science", "HPC"]
categories = ["science"]
exclude = [ 
	".travis.yml",
	"push_docs",
]

[lib]
name = "_lib"
crate-type = ["cdylib"]

[dependencies]
# argmin_core = { path = "../argmin-core" }
# argmin = { path = "../argmin", features = ["ctrlc", "ndarrayl"]}
argmin = {version = "0.2.6", features = ["ctrlc", "ndarrayl"]}
pyo3 = { version = "0.8.5", features = ["extension-module"] }
serde = "1.0"
numpy = "0.7.0"
ndarray = "0.13"

[badges]
travis-ci = { repository = "argmin-rs/pyargmin", branch = "master" }
circle-ci = { repository = "argmin-rs/pyargmin", branch = "master" }
maintenance = { status = "actively-developed" }
